--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
                 @import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
             </style>
         <title>EBWu's HTML Cheatsheet</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header>EBWu's CSS Cheatsheet: HTML Elements</header>
